--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cloudscraper": "^4.6.0",
         "crypto": "latest",
         "dotenv": "^16.0.1",
+        "emoji-unicode": "^2.0.1",
         "eval": "^0.1.8",
         "express": "^4.17.3",
         "fast-speedtest-api": "^0.3.2",
