--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "cloudscraper": "^4.6.0",
         "crypto": "latest",
         "dotenv": "^16.0.1",
-        "emoji-unicode": "^2.0.1",
         "eval": "^0.1.8",
         "express": "^4.17.3",
         "fast-speedtest-api": "^0.3.2",
@@ -39,15 +38,13 @@
         "https-proxy-agent": "latest",
         "image-downloader": "^4.3.0",
         "imgur": "^2.3.0",
-        "imgur-upload-api": "^2.0.0",
-        "javascript-obfuscator": "^4.1.1",
         "jimp": "^0.22.8",
         "lyrics-finder": "^21.7.0",
         "moment": "^2.29.1",
         "moment-timezone": "^0.5.41",
         "mqtt": "latest",
-        "nayan-media-downloader": "^2.3.9",
-        "nayan-server": "^2.3.6",
+        "nayan-api-servers": "^2.4.8",
+        "nayan-media-downloaders": "^0.1.6",
         "node-cmd": "^5.0.0",
         "node-cron": "^3.0.2",
         "node-fetch": "^3.3.1",
@@ -63,15 +60,13 @@
         "qrcode": "^1.5.3",
         "qrcode-reader": "^1.0.4",
         "querystring": "^0.2.1",
-        "rahad-all-downloader": "^2.1.10",
-        "rahad-media-downloader": "^2.1.12",
         "request": "latest",
         "requests": "^0.3.0",
         "semver": "latest",
         "sequelize": "^6.17.0",
         "simple-youtube-api": "^5.2.1",
         "soundcloud-downloader": "^1.0.0",
-        "sqlite3": "^5.1.6",
+        "sqlite3": "^5.1.7",
         "string-similarity": "",
         "systeminformation": "^5.17.9",
         "tesseract.js": "^4.1.1",
