--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "https-proxy-agent": "latest",
         "image-downloader": "^4.3.0",
         "imgur": "^2.3.0",
+        "javascript-obfuscator": "^4.1.1",
         "jimp": "^0.22.8",
         "lyrics-finder": "^21.7.0",
         "moment": "^2.29.1",
